// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step applies isActive prop correctly 1`] = `
<MockStyledComponent
  $isActive={true}
  $isCompleted={false}
>
  <MockStyledComponent
    $isActive={true}
    $isCompleted={false}
  >
    <MockStyledComponent />
  </MockStyledComponent>
  <MockStyledComponent
    $isActive={true}
    $isCompleted={false}
  />
  <MockStyledComponent
    $isActive={true}
    $isCompleted={false}
  >
    <MockStyledComponent
      $isActive={true}
      $isCompleted={false}
    />
  </MockStyledComponent>
</MockStyledComponent>
`;

exports[`Step applies isCompleted prop correctly 1`] = `
<MockStyledComponent
  $isActive={false}
  $isCompleted={true}
>
  <MockStyledComponent
    $isActive={false}
    $isCompleted={true}
  />
  <MockStyledComponent
    $isActive={false}
    $isCompleted={true}
  />
  <MockStyledComponent
    $isActive={false}
    $isCompleted={true}
  >
    <MockStyledComponent
      $isActive={false}
      $isCompleted={true}
    />
  </MockStyledComponent>
</MockStyledComponent>
`;

exports[`Step applies isLast prop correctly 1`] = `
<MockStyledComponent
  $isActive={false}
  $isCompleted={false}
>
  <MockStyledComponent
    $isActive={false}
    $isCompleted={false}
  />
  <MockStyledComponent
    $isActive={false}
    $isCompleted={false}
  >
    <MockStyledComponent
      $isActive={false}
      $isCompleted={false}
    />
  </MockStyledComponent>
</MockStyledComponent>
`;

exports[`Step applies title prop correctly 1`] = `
<MockStyledComponent
  $isActive={false}
  $isCompleted={false}
>
  <MockStyledComponent
    $isActive={false}
    $isCompleted={false}
  />
  <MockStyledComponent
    $isActive={false}
    $isCompleted={false}
  />
  <MockStyledComponent
    $isActive={false}
    $isCompleted={false}
  >
    <MockStyledComponent
      $isActive={false}
      $isCompleted={false}
    >
      Test Title
    </MockStyledComponent>
  </MockStyledComponent>
</MockStyledComponent>
`;

exports[`Step renders children correctly if isActive is provided 1`] = `
<MockStyledComponent
  $isActive={true}
  $isCompleted={false}
>
  <MockStyledComponent
    $isActive={true}
    $isCompleted={false}
  >
    <MockStyledComponent />
  </MockStyledComponent>
  <MockStyledComponent
    $isActive={true}
    $isCompleted={false}
  />
  <MockStyledComponent
    $isActive={true}
    $isCompleted={false}
  >
    <MockStyledComponent
      $isActive={true}
      $isCompleted={false}
    />
    <MockStyledComponent>
      Content
    </MockStyledComponent>
  </MockStyledComponent>
</MockStyledComponent>
`;
